refactor: update service layers to implement monthly charges and HATEOAS
- EmailService:
    - Creates sendMonthlyNotificationForOwner to handle notifications per owner
    - Refactors sendMonthlyNotifications to integrate new per-owner logic
- MonthlyChargeService:
    - Refactors generateMonthlyCharges and createChargeForExpense
    - Creates upsertChargeForExpense for improved charge handling logic
- OwnerService:
    - Refactors createOwner, getAllOwners, and getOwnerEntityById for internal consistency
    - Creates addHateoasCreateLinks and addHateoasOwnerLinks to embed HATEOAS links in responses